# heat-chronicle

./: .gitignore  .sops.yaml  AGENTS.md  CLAUDE.md  README.md  SPEC.md  compose.yaml  preview-icon.html
.github/: dependabot.yml
backend/: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.prod  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: v001_create_initial_tables.py  v002_seed_all_stations.py
backend/app/: config.py  handler.py  main.py
backend/app/application/: scrape_service.py  temperature_service.py
backend/app/application/prefecture/: get_prefecture_use_case.py  list_prefecture_use_case.py  service.py
backend/app/application/station/: get_station_use_case.py  list_station_use_case.py  service.py
backend/app/application/temperature/: fetch_month_use_case.py  get_temperature_use_case.py  scrape_service.py  service.py
backend/app/di/: container.py
backend/app/domain/: fetch_freshness.py  schemas.py  station_repository.py  temperature_data_source.py  temperature_repository.py
backend/app/domain/station/: model.py  repository.py
backend/app/domain/temperature/: data_source.py  model.py  repository.py
backend/app/infrastructure/: database.py  init_tables.py  seed.py
backend/app/infrastructure/dto/: dynamodb.py  jma.py
backend/app/infrastructure/models/: tables.py
backend/app/infrastructure/repositories/: job_repository.py  station_repository.py  temperature_repository.py
backend/app/infrastructure/scraper/: jma_client.py  jma_parser.py  jma_temperature_data_source.py
backend/app/presentation/api/: health.py  hello.py  prefectures.py  stations.py  temperature.py
backend/app/presentation/api/health/: __init__.py  get_health.py
backend/app/presentation/api/hello/: __init__.py  get_hello.py
backend/data/: earliest_years_20260223.csv  prefectures_20260222.txt  stations.json  stations_20260222.csv
backend/integration_tests/: conftest.py
backend/integration_tests/api/: conftest.py  test_health.py  test_prefectures.py  test_stations.py  test_temperature.py
backend/integration_tests/fixtures/: mock_overrides.py  test_data.py
backend/tests/: conftest.py  test_infrastructure_dto.py  test_jma_parser.py  test_jma_temperature_data_source.py  test_layer_boundaries.py  test_presentation_dto.py  test_seed.py  test_station_repository.py
backend/tests/application/: test_fetch_month_output.py  test_station_output.py  test_temperature_output.py
backend/tests/domain/: test_fetch_freshness.py
database/: README.md  (+1 more)
(+120 files in other folders)
